--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,3 +23,17 @@ jobs:
 
       - name: Build
         run: make build
+  deployment:
+    name: Deployment
+    runs-on: ubuntu latest
+    needs: [build]
+    if: github.ref == 'refs/heads/master'
+    steps:
+    - name: executing remote ssh commands using password
+      uses: appleboy/ssh-action@master
+      with:
+        host: ${{ secrets.IP }}
+        username: ${{ secrets.USERNAME }}
+        password: ${{ secrets.PASSWORD }}
+        script: whoami
+    
