--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,7 +25,7 @@ jobs:
         run: make build
   deployment:
     name: Deployment
-    runs-on: ubuntu latest
+    runs-on: ubuntu-latest
     needs: [build]
     if: github.ref == 'refs/heads/master'
     steps:
