--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,7 +32,9 @@ jobs:
           echo "rapid_api_key: $(echo {{ secrets.RAPID_API_KEY }})" >> config/dev.yml
         
       - name: Build
-        run: make docker-build
+        run: |
+          make docker-build
+          docker tag tg_translate_bot ${{ secrets.DOCKER_HUB_USERNAME }}/telegram_bot:latest
         
       - name: Login to Docker Hub
         uses: docker/login-action@v1
