--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -68,6 +68,8 @@ jobs:
             docker stop $(echo $CONTAINER_NAME)
             # Remove old container
             docker rm $(echo $CONTAINER_NAME)
+            # Remove existing image
+            docker rmi ${{ secrets.DOCKER_HUB_USERNAME }}/telegram_bot
             # Pull new image
             docker pull ${{ secrets.DOCKER_HUB_USERNAME }}/telegram_bot:latest
             # Run a new container from a new image
